# PaymentApp

./: docker-compose.yml  runbooks.md
Unified_Payment_App_Documents/: Unified_Payment_App_SDD.docx  Unified_Payment_App_SRS.docx
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  documents.py  health.py  paybox.py  transactions.py
backend/app/config/: __init__.py  logging.py  rate_limit.py
backend/app/infra/: __init__.py
backend/app/infra/auth/: __init__.py  password.py  tokens.py
backend/app/infra/firestore/: __init__.py
backend/app/infra/gcs/: __init__.py
backend/app/infra/pubsub/: __init__.py
backend/app/infra/secrets/: __init__.py
backend/app/infra/tasks/: __init__.py
backend/app/modules/: __init__.py
backend/app/modules/audit/: __init__.py  repository.py
backend/app/modules/auth/: __init__.py  dependencies.py  repository.py  service.py
backend/app/modules/customers/: __init__.py  repository.py
backend/app/modules/documents/: __init__.py  repository.py  service.py
backend/app/modules/documents/providers/: base.py  green_invoice.py
backend/app/modules/tenants/: __init__.py  repository.py
backend/app/modules/transactions/: __init__.py  repository.py  service.py
backend/app/schemas/: __init__.py  pagination.py
backend/app/workers/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_documents.py  test_health.py  test_password.py  test_paybox.py  test_tokens.py  test_transactions.py  test_transactions_export.py
(+19 files in other folders)
